--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,22 +15,28 @@
         <h2>What We Offer</h2>
         <p class="mb-5">We treat you like a king</p>
         <div class="row text-center">
-            <div class="col-sm-4">
-                <div class="thumbnail bg-light" style="border-radius: 5px;">
-                    <img src="/images/service-1.jpg" alt="Nick">
+            <div class="col-sm-6 mb-3">
+                <div class="thumbnail bg-light" style="border-radius: 5px; overflow: hidden">
+                    <img src="/images/service-1.jpg" class="img im-responsive" alt="Nick">
                     <p><strong>Restaurant</strong></p>
                 </div>
             </div>
-            <div class="col-sm-4">
-                <div class="thumbnail bg-light" style="border-radius: 5px;">
-                    <img src="/images/service-2.jpg" alt="Brian">
+            <div class="col-sm-6 mb-3">
+                <div class="thumbnail bg-light" style="border-radius: 5px; overflow: hidden">
+                    <img src="/images/service-2.jpg" class="img im-responsive" alt="Brian">
                     <p><strong>Animal Zoo</strong></p>
                 </div>
             </div>
-            <div class="col-sm-4 bg-light" style="border-radius: 5px;">
-                <div class="thumbnail">
-                    <img src="/images/service-3.jpg" alt="AJ">
+            <div class="col-sm-6 mb-3" style="border-radius: 5px; overflow: hidden">
+                <div class="thumbnail bg-light">
+                    <img src="/images/service-3.jpg" class="img im-responsive" alt="AJ">
                     <p><strong>Sea Party</strong></p>
+                </div>
+            </div>
+            <div class="col-sm-6 mb-3">
+                <div class="thumbnail bg-light" style="border-radius: 5px; overflow: hidden">
+                    <img src="/images/service-2.jpg" class="img im-responsive" alt="Brian">
+                    <p><strong>Animal Zoo</strong></p>
                 </div>
             </div>
         </div>
