--- a/views/services.hbs
+++ b/views/services.hbs
@@ -9,6 +9,7 @@
 <section class="p-5">
     <div id="service" class="container text-center bg-grey">
         <div class="row text-center">
+            {{#if services}}
             {{#each services}}
             <div class="col-sm-4">
                 <div class="thumbnail bg-light pt-3" style="border-radius: 5px;">
@@ -22,6 +23,12 @@
                 </div>
             </div>
             {{/each}}
+            {{else}}
+            <div class="col-sm-12 text-center p-5">
+                <h1>No Service Register Here</h1>
+                <p>Please check back </p>
+            </div>
+            {{/if}}
         </div>
     </div>
 </section>
